tdf#113227 FILESAVE: PPT: bullets disappear after RT

regression from

	commit afa675469cd9894f41a6b9eeb2e7acc8245d256c
	use SvxExtNumType in SvxNumberType

where I managed to put a "default: break" statement in the wrong place

Change-Id: Ic821a03208a75363c538c4641077b084f1e2d242